@@ -1,0 +1,11 @@
+# file GENERATED by distutils, do NOT edit
+CHANGELOG
+MANIFEST.in
+Makefile
+README.txt
+gpl-3.0.txt
+nmap.html
+setup.py
+nmap/__init__.py
+nmap/example.py
+nmap/nmap.py
