@@ -34,21 +34,23 @@ Test strings :
 ...     nm.scan(arguments='-wrongargs')
 ... except nmap.PortScannerError:
 ...     pass
+>>> 'error' in nm.scan('yahoo.fs', arguments='-sP')['nmap']['scaninfo']
+True
 >>> r=nm.scan('127.0.0.1', '22-443')
 >>> nm.command_line()
 'nmap -oX - -p 22-443 -sV 127.0.0.1'
 >>> nm.scaninfo()
-{'tcp': {'services': '22-443', 'method': 'connect'}}
+{'tcp': {'services': '22-443', 'method': 'syn'}}
 >>> nm.all_hosts()
 ['127.0.0.1']
 >>> nm['127.0.0.1'].hostname()
-'localhost.localdomain'
+'localhost'
 >>> nm['127.0.0.1'].state()
 'up'
 >>> nm['127.0.0.1'].all_protocols()
 ['tcp']
 >>> nm['127.0.0.1']['tcp'].keys()
-dict_keys([80, 25, 443, 22, 111])
+dict_keys([139, 111, 80, 53, 22, 25, 443])
 >>> nm['127.0.0.1'].has_tcp(22)
 True
 >>> nm['127.0.0.1'].has_tcp(23)
@@ -75,9 +77,9 @@ True
 ['127.0.0.0', '127.0.0.1', '127.0.0.2', '127.0.0.3']
 >>> r=nm.scan('127.0.0.1', arguments='-O')
 >>> nm['127.0.0.1']['osclass']
-[{'vendor': u'Linux', 'osfamily': u'Linux', 'type': u'general purpose', 'osgen': u'2.6.X', 'accuracy': u'98'}, {'vendor': u'Netgear', 'osfamily': u'embedded', 'type': u'WAP', 'osgen': '', 'accuracy': ''}, {'vendor': u'Gemtek', 'osfamily': u'embedded', 'type': u'WAP', 'osgen': '', 'accuracy': ''}, {'vendor': u'Siemens', 'osfamily': u'embedded', 'type': u'WAP', 'osgen': '', 'accuracy': ''}, {'vendor': u'Linux', 'osfamily': u'Linux', 'type': u'general purpose', 'osgen': u'2.4.X', 'accuracy': u'90'}, {'vendor': u'Linksys', 'osfamily': u'embedded', 'type': u'WAP', 'osgen': '', 'accuracy': ''}, {'vendor': u'Linux', 'osfamily': u'Linux', 'type': u'WAP', 'osgen': u'2.4.X', 'accuracy': u'90'}, {'vendor': u'Nokia', 'osfamily': u'Linux', 'type': u'general purpose', 'osgen': u'2.6.X', 'accuracy': u'89'}]
+[{'vendor': 'Linux', 'osfamily': 'Linux', 'type': 'general purpose', 'osgen': '2.6.X', 'accuracy': '96'}, {'vendor': 'AXIS', 'osfamily': 'Linux', 'type': 'webcam', 'osgen': '2.6.X', 'accuracy': '91'}, {'vendor': 'Crestron', 'osfamily': '2-Series', 'type': 'specialized', 'osgen': '', 'accuracy': ''}, {'vendor': 'Gemtek', 'osfamily': 'embedded', 'type': 'WAP', 'osgen': '', 'accuracy': ''}, {'vendor': 'Siemens', 'osfamily': 'embedded', 'type': 'WAP', 'osgen': '', 'accuracy': ''}, {'vendor': 'Linux', 'osfamily': 'Linux', 'type': 'general purpose', 'osgen': '2.4.X', 'accuracy': '88'}, {'vendor': 'Check Point', 'osfamily': 'embedded', 'type': 'firewall', 'osgen': '', 'accuracy': ''}, {'vendor': 'Check Point', 'osfamily': 'Linux', 'type': 'firewall', 'osgen': '2.4.X', 'accuracy': '88'}, {'vendor': 'Linux', 'osfamily': 'Linux', 'type': 'WAP', 'osgen': '2.4.X', 'accuracy': '88'}, {'vendor': 'Linux', 'osfamily': 'Linux', 'type': 'general purpose', 'osgen': '', 'accuracy': ''}, {'vendor': 'Linux', 'osfamily': 'Linux', 'type': 'WAP', 'osgen': '2.6.X', 'accuracy': '87'}, {'vendor': 'Vodavi', 'osfamily': 'embedded', 'type': 'PBX', 'osgen': '', 'accuracy': ''}, {'vendor': 'Lexmark', 'osfamily': 'embedded', 'type': 'printer', 'osgen': '', 'accuracy': ''}]
 >>> nm['127.0.0.1']['fingerprint']
-'OS:SCAN(V=5.50%D=11/9%OT=22%CT=1%CU=37937%PV=N%DS=0%DC=L%G=Y%TM=4EBAE79D%P=\\nOS:i686-pc-linux-gnu)SEQ(SP=103%GCD=1%ISR=10D%TI=Z%CI=Z%II=I%TS=8)OPS(O1=M4\\nOS:00CST11NW6%O2=M400CST11NW6%O3=M400CNNT11NW6%O4=M400CST11NW6%O5=M400CST11\\nOS:NW6%O6=M400CST11)WIN(W1=8000%W2=8000%W3=8000%W4=8000%W5=8000%W6=8000)ECN\\nOS:(R=Y%DF=Y%T=40%W=8018%O=M400CNNSNW6%CC=Y%Q=)T1(R=Y%DF=Y%T=40%S=O%A=S+%F=\\nOS:AS%RD=0%Q=)T2(R=N)T3(R=Y%DF=Y%T=40%W=8000%S=O%A=S+%F=AS%O=M400CST11NW6%R\\nOS:D=0%Q=)T4(R=Y%DF=Y%T=40%W=0%S=A%A=Z%F=R%O=%RD=0%Q=)T5(R=Y%DF=Y%T=40%W=0%\\nOS:S=Z%A=S+%F=AR%O=%RD=0%Q=)T6(R=Y%DF=Y%T=40%W=0%S=A%A=Z%F=R%O=%RD=0%Q=)T7(\\nOS:R=Y%DF=Y%T=40%W=0%S=Z%A=S+%F=AR%O=%RD=0%Q=)U1(R=Y%DF=N%T=40%IPL=164%UN=0\\nOS:%RIPL=G%RID=G%RIPCK=G%RUCK=G%RUD=G)IE(R=Y%DFI=N%T=40%CD=S)\\n'
+'OS:SCAN(V=5.21%D=11/23%OT=22%CT=1%CU=33028%PV=N%DS=0%DC=L%G=Y%TM=50AFE898%P\\nOS:=x86_64-unknown-linux-gnu)SEQ(SP=105%GCD=1%ISR=107%TI=Z%CI=Z%II=I%TS=8)O\\nOS:PS(O1=M400CST11NW6%O2=M400CST11NW6%O3=M400CNNT11NW6%O4=M400CST11NW6%O5=M\\nOS:400CST11NW6%O6=M400CST11)WIN(W1=8000%W2=8000%W3=8000%W4=8000%W5=8000%W6=\\nOS:8000)ECN(R=Y%DF=Y%T=40%W=8018%O=M400CNNSNW6%CC=Y%Q=)T1(R=Y%DF=Y%T=40%S=O\\nOS:%A=S+%F=AS%RD=0%Q=)T2(R=N)T3(R=N)T4(R=Y%DF=Y%T=40%W=0%S=A%A=Z%F=R%O=%RD=\\nOS:0%Q=)T5(R=Y%DF=Y%T=40%W=0%S=Z%A=S+%F=AR%O=%RD=0%Q=)T6(R=Y%DF=Y%T=40%W=0%\\nOS:S=A%A=Z%F=R%O=%RD=0%Q=)T7(R=Y%DF=Y%T=40%W=0%S=Z%A=S+%F=AR%O=%RD=0%Q=)U1(\\nOS:R=Y%DF=N%T=40%IPL=164%UN=0%RIPL=G%RID=G%RIPCK=G%RUCK=G%RUD=G)IE(R=Y%DFI=\\nOS:N%T=40%CD=S)\\n'
 """
 
 
@@ -201,7 +203,10 @@ class PortScanner(object):
         """
         Scan given hosts
 
-        May raise PortScannerError exception if nmap output something on stderr
+        May raise PortScannerError exception if nmap output was not xml
+
+        Test existance of the following key to know if something went wrong : ['nmap']['scaninfo']['error']
+        If not present, everything was ok.
 
         hosts = string for hosts as nmap use it 'scanme.nmap.org' or '198.116.0-255.1-127' or '216.163.128.20/20'
         ports = string for ports as nmap use it '22,53,110,143-4564'
@@ -228,7 +233,16 @@ class PortScanner(object):
         self._nmap_last_output = bytes.decode(self._nmap_last_output)
         nmap_err = bytes.decode(nmap_err)
 
-        # If there was something on stderr, there was a problem so abort...
+        # If there was something on stderr, there was a problem so abort...  in
+        # fact not always. As stated by AlenLPeacock :
+        # This actually makes python-nmap mostly unusable on most real-life
+        # networks -- a particular subnet might have dozens of scannable hosts,
+        # but if a single one is unreachable or unroutable during the scan,
+        # nmap.scan() returns nothing. This behavior also diverges significantly
+        # from commandline nmap, which simply stderrs individual problems but
+        # keeps on trucking.
+
+        nmap_err_keep_trace = []
         if len(nmap_err) > 0:
             regex_warning = re.compile('^Warning: .*')
             for line in nmap_err.split('\n'):
@@ -238,8 +252,8 @@ class PortScanner(object):
                         sys.stderr.write(line+'\n')
                         pass
                     else:
-                        raise PortScannerError(nmap_err)
-
+                        #raise PortScannerError(nmap_err)
+                        nmap_err_keep_trace.append(nmap_err)
 
         # nmap xml output looks like :
         #  <host starttime="1267974521" endtime="1267974522">
@@ -262,8 +276,12 @@ class PortScanner(object):
 
 
         scan_result = {}
-        
-        dom = xml.dom.minidom.parseString(self._nmap_last_output)
+
+
+        try:
+            dom = xml.dom.minidom.parseString(self._nmap_last_output)
+        except xml.parsers.expat.ExpatError:
+            raise PortScannerError(self._nmap_last_output)
 
         # nmap command line
         scan_result['nmap'] = {
@@ -275,6 +293,11 @@ class PortScanner(object):
                          'downhosts':dom.getElementsByTagName("hosts")[0].getAttributeNode('down').value,
                          'totalhosts':dom.getElementsByTagName("hosts")[0].getAttributeNode('total').value}
             }
+
+        # if there was an error
+        if len(nmap_err_keep_trace)>0:
+            scan_result['nmap']['scaninfo']['error'] = nmap_err_keep_trace
+
         # info about scan
         for dsci in dom.getElementsByTagName('scaninfo'):
             scan_result['nmap']['scaninfo'][dsci.getAttributeNode('protocol').value] = {                
